--- a/notes/index.html
+++ b/notes/index.html
@@ -170,12 +170,6 @@
                       >
                     </h3>
                   </header>
-                  <p>
-                    This collection contains my notes for various
-                    physics-related courses I've taken at Imperial College
-                    London.
-                  </p>
-
                   <div class="course-card">
                     <div class="course-header">
                       <h4>Quantum Information (Fall 2023)</h4>
@@ -220,80 +214,105 @@
                     </div>
                   </div>
 
-                  <ul>
-                    <li>
-                      <strong></strong><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Notes: </strong
-                      ><a href="">Quantum Optics</a>
-                    </li>
-                  </ul>
-                  <ul>
-                    <li>
-                      <strong
-                        >Mathematical Methods for Physicists (Fall 2023)</strong
-                      ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;
-                      <strong>Study Notes: </strong
-                      ><a
-                        href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
-                        >Mathematical Methods for Physicists</a
-                      ><br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;
-                      <strong>Review Notes: </strong
-                      ><a href="/docs/notes/revision-for-2024-mmp-exam.pdf"
-                        >Mathematical Methods for Physicists</a
-                      >
-                    </li>
-                  </ul>
-                  <ul>
-                    <li>
-                      <strong>Advanced Classical Mechanics (Fall 2023)</strong
-                      ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Notes: </strong
-                      ><a
-                        href="/docs/notes/notes-on-advanced-classical-physics.pdf"
-                        >Advanced Classical Mechanics</a
-                      >
-                    </li>
-                  </ul>
-                  <ul>
-                    <li>
-                      <strong>Quantum Theory of Matter (Spring 2024)</strong
-                      ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Notes: </strong
-                      ><a
-                        href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
-                        >Quantum Theory of Matter</a
-                      >
-                    </li>
-                  </ul>
-                  <ul>
-                    <li>
-                      <strong>Laser Technology (Spring 2024)</strong><br />
-                      This course covers two main topics:
-                      <strong>Laser Device Technology</strong> and
-                      <strong>Nonlinear Optics</strong>. I am not particularly
-                      interested in the first topic, as it focuses primarily on
-                      conceptual understanding and requires memorizing numerous
-                      concepts for exams, rather than employing rigorous
-                      mathematical derivations to prove or explore the
-                      principles in depth. <br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Notes: </strong
-                      ><a
-                        href="/docs/notes/notes-on-laser-device-technology.pdf"
-                        >Laser Device Technology</a
-                      ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Notes: </strong
-                      ><a href="/docs/notes/notes-on-nonlinear-optics.pdf"
-                        >Nonlinear Optics</a
-                      >
-                    </li>
-                  </ul>
+                  <div class="course-card">
+                    <div class="course-header">
+                      <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
+                      <div class="course-meta">
+                        <span class="pill">Graduate</span>
+                        <span class="pill">Core</span>
+                      </div>
+                    </div>
+                    <div class="course-body">
+                      <p></p>
+                      <div class="resource-links">
+                        <a
+                          href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
+                          class="button small"
+                          ><i class="fas fa-book"></i> Study Notes</a
+                        >
+                        <a
+                          href="/docs/notes/revision-for-2024-mmp-exam.pdf"
+                          class="button small"
+                          ><i class="fas fa-star"></i> Review Notes</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="course-card">
+                    <div class="course-header">
+                      <h4>Advanced Classical Mechanics (Fall 2023)</h4>
+                      <div class="course-meta">
+                        <span class="pill">Graduate</span>
+                        <span class="pill">Core</span>
+                      </div>
+                    </div>
+                    <div class="course-body">
+                      <p></p>
+                      <div class="resource-links">
+                        <a
+                          href="/docs/notes/notes-on-advanced-classical-physics.pdf"
+                          class="button small"
+                          ><i class="fas fa-book"></i> Study Notes</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="course-card">
+                    <div class="course-header">
+                      <h4>Quantum Theory of Matter (Spring 2024)</h4>
+                      <div class="course-meta">
+                        <span class="pill">Graduate</span>
+                        <span class="pill">Core</span>
+                      </div>
+                    </div>
+                    <div class="course-body">
+                      <p></p>
+                      <div class="resource-links">
+                        <a
+                          href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
+                          class="button small"
+                          ><i class="fas fa-book"></i> Study Notes</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="course-card">
+                    <div class="course-header">
+                      <h4>Laser Technology (Spring 2024)</h4>
+                      <div class="course-meta">
+                        <span class="pill">Graduate</span>
+                        <span class="pill">Core</span>
+                      </div>
+                    </div>
+                    <div class="course-body">
+                      <p>
+                        This course covers two main topics:
+                        <strong>Laser Device Technology</strong> and
+                        <strong>Nonlinear Optics</strong>. I am not particularly
+                        interested in the first topic, as it focuses primarily
+                        on conceptual understanding and requires memorizing
+                        numerous concepts for exams, rather than employing
+                        rigorous mathematical derivations to prove or explore
+                        the principles in depth.
+                      </p>
+                      <div class="resource-links">
+                        <a
+                          href="/docs/notes/notes-on-laser-device-technology.pdf"
+                          class="button small"
+                          ><i class="fas fa-book"></i> Laser Device
+                          Technology</a
+                        >
+                        <a
+                          href="/docs/notes/notes-on-nonlinear-optics.pdf"
+                          class="button small"
+                          ><i class="fas fa-book"></i> Nonlinear Optics</a
+                        >
+                      </div>
+                    </div>
+                  </div>
                 </section>
                 <section id="hust">
                   <header>
