--- a/notes/index.html
+++ b/notes/index.html
@@ -185,7 +185,7 @@
                         Nielsen and Chuang.
                       </p>
                       <div class="resource-links">
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/notes-on-quantum-information.pdf"
                           >Quantum Information</a
@@ -205,7 +205,7 @@
                     <div class="course-body">
                       <p></p>
                       <div class="resource-links">
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/notes-on-quantum-optics.pdf"
                           >Quantum Optics</a
@@ -225,13 +225,13 @@
                     <div class="course-body">
                       <p></p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Note: </strong
                         ><a
                           href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
                           >Mathematical Methods for Physicists</a
                         ><br />
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Review Notes: </strong
                         ><a href="/docs/notes/revision-for-2024-mmp-exam.pdf"
                           >Mathematical Methods for Physicists</a
@@ -251,7 +251,7 @@
                     <div class="course-body">
                       <p></p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Note: </strong
                         ><a
                           href="/docs/notes/notes-on-advanced-classical-physics.pdf"
@@ -272,7 +272,7 @@
                     <div class="course-body">
                       <p></p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Note: </strong
                         ><a
                           href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
@@ -302,13 +302,13 @@
                         the principles in depth.
                       </p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Note: </strong
                         ><a
                           href="/docs/notes/notes-on-laser-device-technology.pdf"
                           >Laser Device Technology</a
                         ><br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Note: </strong
                         ><a href="/docs/notes/notes-on-nonlinear-optics.pdf"
                           >Nonlinear Optics</a
@@ -348,14 +348,14 @@
                         Prof. Yong Hu.
                       </p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[复变函数]期末复习笔记.pdf"
                           >Complex Analysis</a
                         >
                         <br />
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Review Notes:
                         </strong>
                         <a href="/docs/notes/[数学物理方程]课堂笔记.pdf"
@@ -382,7 +382,7 @@
                         in English.
                       </p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/note-on-classical-mechanics.pdf"
@@ -406,7 +406,7 @@
                         magnetostatics, and Maxwell's equations.
                       </p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Review Notes:
                         </strong>
                         <a href="/docs/notes/[电磁学]期末复习笔记.pdf"
@@ -434,28 +434,28 @@
                         have been divided into four parts.
                       </p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[光学]课堂笔记_Part1.pdf"
                           >Optics - Part 1</a
                         >
                         <br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[光学]课堂笔记_Part2.pdf"
                           >Optics - Part 2</a
                         >
                         <br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[光学]课堂笔记_Part3.pdf"
                           >Optics - Part 3</a
                         >
                         <br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[光学]课堂笔记_Part4.pdf"
@@ -482,22 +482,22 @@
                         and textbook.
                       </p>
                       <div class="resource-links">
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/[模拟电子技术]笔记_Part1.pdf"
                           >Analogue Electronics - Part 1</a
                         ><br />
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/[模拟电子技术]笔记_Part2.pdf"
                           >Analogue Electronics - Part 2</a
                         ><br />
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/[模拟电子技术]笔记_Part3.pdf"
                           >Analogue Electronics - Part 3</a
                         ><br />
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/[模拟电子技术]笔记_Part4.pdf"
                           >Analogue Electronics - Part 4</a
@@ -528,12 +528,12 @@
                         >.
                       </p>
                       <div class="resource-links">
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/[量子力学]学习笔记.pdf"
                           >Quantum Mechanics</a
                         ><br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Review Notes: </strong
                         ><a href="/docs/notes/[量子力学]期末偷分宝典.pdf"
                           >Quantum Mechanics</a
@@ -553,7 +553,7 @@
                     <div class="course-body">
                       <p>Taught by Prof. Zhao-Feng Kang.</p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Review Notes:
                         </strong>
                         <a href="/docs/notes/[电动力学]期末偷分宝典.pdf"
@@ -567,14 +567,14 @@
                     <div class="course-header">
                       <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
                       <div class="course-meta">
-                        <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
+                        <span class="pill">Graduate</span>
+                        <span class="pill">Elective</span>
                       </div>
                     </div>
                     <div class="course-body">
                       <p>Taught by Prof. Yong Hu.</p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[高等量子力学]课堂笔记.pdf"
@@ -589,37 +589,37 @@
                       <h4>Digital Electronics (Fall 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
+                        <span class="pill">Elective</span>
                       </div>
                     </div>
                     <div class="course-body">
                       <p>This course was taught by Prof. Qi Song.</p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[数字电子技术]笔记_Part1.pdf"
                           >Digital Electronics - Part 1</a
                         ><br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[数字电子技术]笔记_Part2.pdf"
                           >Digital Electronics - Part 2</a
                         ><br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[数字电子技术]笔记_Part3.pdf"
                           >Digital Electronics - Part 3</a
                         ><br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[数字电子技术]笔记_Part4.pdf"
                           >Digital Electronics - Part 4</a
                         ><br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[数字电子技术]笔记_Part5.pdf"
@@ -651,7 +651,7 @@
                         on the textbook by David Tong.
                       </p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/note-on-statistical-physics.pdf"
@@ -672,7 +672,7 @@
                     <div class="course-body">
                       <p>Taught by Prof. Liu-Song Yuan.</p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Review Notes:
                         </strong>
                         <a href="/docs/notes/[固体物理]期末复习笔记.pdf"
@@ -686,21 +686,21 @@
                     <div class="course-header">
                       <h4>Quantum Optics (Fall 2021)</h4>
                       <div class="course-meta">
-                        <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
+                        <span class="pill">Graduate</span>
+                        <span class="pill">Elective</span>
                       </div>
                     </div>
                     <div class="course-body">
                       <p>Taught by Prof. Jia-Hua Li.</p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[量子光学]学习笔记.pdf"
                           >Quantum Optics</a
                         >
                         <br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Review Notes:
                         </strong>
                         <a href="/docs/notes/[量子光学]复习笔记.pdf"
@@ -715,13 +715,13 @@
                       <h4>Introduction to Plasma Physics (Fall 2021)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
+                        <span class="pill">Elective</span>
                       </div>
                     </div>
                     <div class="course-body">
                       <p>Taught by Prof. He-Lin Wei.</p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/[等离子体导论]课堂笔记.pdf"
@@ -745,7 +745,6 @@
                         <h4>Quantum Mechanics II (Summer 2020)</h4>
                         <div class="course-meta">
                           <span class="pill">Graduate</span>
-                          <span class="pill">Summer School</span>
                         </div>
                       </div>
                       <div class="course-body">
@@ -755,14 +754,14 @@
                           Summer School at Peking University.
                         </p>
                         <div class="resource-links">
-                          <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                             >Study Notes:
                           </strong>
                           <a href="/docs/notes/Ch1_Phase in QM.pdf"
                             >Chapter 1: Phase in Quantum Mechanics</a
                           >
                           <br />
-                          <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                             >Study Notes:
                           </strong>
                           <a
@@ -771,14 +770,14 @@
                             Mechanics</a
                           >
                           <br />
-                          <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                             >Study Notes:
                           </strong>
                           <a href="/docs/notes/Ch3_The WKB Approximation.pdf"
                             >Chapter 3: The WKB Approximation</a
                           >
                           <br />
-                          <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                             >Study Notes:
                           </strong>
                           <a
@@ -786,7 +785,7 @@
                             >Chapter 4: Rotation and Vibration of Molecules</a
                           >
                           <br />
-                          <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                             >Study Notes:
                           </strong>
                           <a
@@ -794,7 +793,7 @@
                             >Chapter 5: Variation Principle</a
                           >
                           <br />
-                          <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                             >Study Notes:
                           </strong>
                           <a
@@ -826,7 +825,7 @@
                         Self-study notes for the Physics GRE exam taken in 2021.
                       </p>
                       <div class="resource-links">
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                           >Study Notes:
                         </strong>
                         <a href="/docs/notes/Physics_GRE_Notes.pdf"
