--- a/notes/year.html
+++ b/notes/year.html
@@ -120,7 +120,7 @@
                   <ul>
                     <li>
                       <strong>Quantum Theory of Matter</strong><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
@@ -139,13 +139,13 @@
                       concepts for exams, rather than employing rigorous
                       mathematical derivations to prove or explore the
                       principles in depth. <br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-laser-device-technology.pdf"
                         >Laser Device Technology</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/notes-on-nonlinear-optics.pdf"
                         >Nonlinear Optics</a
@@ -168,7 +168,7 @@
                       This course was taught by Prof. Myungshik Kim. My notes
                       were based on his lecture notes and the textbook by
                       Nielsen and Chuang.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/notes-on-quantum-information.pdf"
                         >Quantum Information</a
@@ -178,7 +178,7 @@
                   <ul>
                     <li>
                       <strong>Quantum Optics</strong><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/notes-on-quantum-optics.pdf"
                         >Quantum Optics</a
@@ -188,13 +188,13 @@
                   <ul>
                     <li>
                       <strong>Mathematical Methods for Physicists</strong><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;
                       <strong>Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
                         >Mathematical Methods for Physicists</a
                       ><br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;
+                      <i class="fas fa-book"></i>&nbsp;&nbsp;
                       <strong>Review Notes: </strong
                       ><a href="/docs/notes/revision-for-2024-mmp-exam.pdf"
                         >Mathematical Methods for Physicists</a
@@ -204,7 +204,7 @@
                   <ul>
                     <li>
                       <strong>Advanced Classical Mechanics</strong><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-advanced-classical-physics.pdf"
@@ -233,7 +233,7 @@
                       essay. Additionally, I worked on a small project focused
                       on the Ising Model. My study notes are primarily based on
                       the textbook by David Tong.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/note-on-statistical-physics.pdf"
                         >Thermodynamics and Statistical Physics</a
@@ -244,7 +244,7 @@
                     <li>
                       <strong>Solid State Physics</strong><br />
                       This course was taught by Prof. Liu-Song Yuan.<br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
                       ><a href="/docs/notes/[固体物理]期末复习笔记.pdf"
                         >Solid State Physics</a
@@ -255,12 +255,12 @@
                     <li>
                       <strong>Quantum Optics</strong><br />
                       This course was taught by Prof. Jia-Hua Li.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[量子光学]学习笔记.pdf"
                         >Quantum Optics</a
                       ><br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
                       ><a href="/docs/notes/[量子光学]复习笔记.pdf"
                         >Quantum Optics</a
@@ -271,7 +271,7 @@
                     <li>
                       <strong>Introduction to Plasma Physics</strong><br />
                       This course was taught by Prof. He-Lin Wei.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[等离子体导论]课堂笔记.pdf"
                         >Introduction to Plasma Physics</a
@@ -283,7 +283,7 @@
                       <strong>Physics GRE</strong><br />
                       These are my self-study notes for the Physics GRE, which I
                       took in 2021.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/Physics_GRE_Notes.pdf"
                         >Physics GRE</a
@@ -308,22 +308,22 @@
                       as exemplary for the course and shared with classmates.
                       Due to the large file size, the notes have been divided
                       into four parts.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[光学]课堂笔记_Part1.pdf"
                         >Optics - Part 1</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[光学]课堂笔记_Part2.pdf"
                         >Optics - Part 2</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[光学]课堂笔记_Part3.pdf"
                         >Optics - Part 3</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[光学]课堂笔记_Part4.pdf"
                         >Optics - Part 4</a
@@ -340,22 +340,22 @@
                       >
                       and the textbook. Due to the large file size, the notes
                       have been divided into four parts.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[模拟电子技术]笔记_Part1.pdf"
                         >Analogue Electronics - Part 1</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[模拟电子技术]笔记_Part2.pdf"
                         >Analogue Electronics - Part 2</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[模拟电子技术]笔记_Part3.pdf"
                         >Analogue Electronics - Part 3</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[模拟电子技术]笔记_Part4.pdf"
                         >Analogue Electronics - Part 4</a
@@ -375,12 +375,12 @@
                         href="https://ocw.mit.edu/courses/8-04-quantum-physics-i-spring-2016/"
                         >MIT OCW</a
                       >.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[量子力学]学习笔记.pdf"
                         >Quantum Mechanics</a
                       ><br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
                       ><a href="/docs/notes/[量子力学]期末偷分宝典.pdf"
                         >Quantum Mechanics</a
@@ -391,7 +391,7 @@
                     <li>
                       <strong>Electrodynamics</strong><br />
                       This course was taught by Prof. Zhao-Feng Kang.<br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
                       ><a href="/docs/notes/[电动力学]期末偷分宝典.pdf"
                         >Electrodynamics</a
@@ -402,7 +402,7 @@
                     <li>
                       <strong>Advanced Quantum Mechanics</strong><br />
                       This course was taught by Prof. Yong Hu.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[高等量子力学]课堂笔记.pdf"
                         >Advanced Quantum Mechanics</a
@@ -413,27 +413,27 @@
                     <li>
                       <strong>Digital Electronics</strong><br />
                       This course was taught by Prof. Qi Song.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[数字电子技术]笔记_Part1.pdf"
                         >Digital Electronics - Part 1</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[数字电子技术]笔记_Part2.pdf"
                         >Digital Electronics - Part 2</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[数字电子技术]笔记_Part3.pdf"
                         >Digital Electronics - Part 3</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[数字电子技术]笔记_Part4.pdf"
                         >Digital Electronics - Part 4</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[数字电子技术]笔记_Part5.pdf"
                         >Digital Electronics - Part 5</a
@@ -446,36 +446,36 @@
                       These are my lecture notes from the Quantum Mechanics II
                       course taught by Prof. Zhixin Qian during the 2020 Summer
                       School at Peking University.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/Ch1_Phase in QM.pdf"
                         >Chapter 1: Phase in Quantum Mechanics</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
                         href="/docs/notes/Ch2_Path Integral Formalism of QM.pdf"
                         >Chapter 2: Path Integral Formalism of Quantum
                         Mechanics</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/Ch3_The WKB Approximation.pdf"
                         >Chapter 3: The WKB Approximation</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
                         href="/docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
                         >Chapter 4: Rotation and Vibration of Molecules</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
                         href="/docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
                         >Chapter 5: Variation Principle</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
                         href="/docs/notes/Ch6_Introduction to Many-body Theory.pdf"
@@ -501,12 +501,12 @@
                       <strong>Equations of Mathematical Physics</strong>, was
                       taught by Prof. Yong Hu. The content and structure of my
                       notes primarily derived from his lecture notes. <br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Note: </strong
                       ><a href="/docs/notes/[复变函数]期末复习笔记.pdf"
                         >Complex Analysis</a
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/[数学物理方程]课堂笔记.pdf"
                         >Equations of Mathematical Physics</a
@@ -521,7 +521,7 @@
                       Mechanics, with several applications including central
                       force motion, rigid bodies, and small oscillations.
                       Notably, these were my first notes written in English.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/note-on-classical-mechanics.pdf"
                         >Theoretical Mechanics</a
@@ -534,7 +534,7 @@
                       This course was taught by Prof. Xue-Wen Chen, which
                       covered include electrostatics, magnetostatics,
                       electromagnetic waves, and Maxwell's equations.<br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
                       ><a href="/docs/notes/[电磁学]期末复习笔记.pdf"
                         >Electromagnetics</a
